# axum-prisma-workspace

./: .gitignore  Cargo.toml  cargo-generate.toml
api/: Cargo.toml
api/src/: lib.rs  main.rs
db/: Cargo.toml
db/src/: lib.rs
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma-cli/src/: main.rs
