# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "api" }

[workspace]
members = ["prisma-cli", "db", "api"]
resolver = "2"

